--- a/DataStructure/算法/回溯算法.md
+++ b/DataStructure/算法/回溯算法.md
@@ -189,7 +189,7 @@ t:7,queen:[2, 0, 3, 1]
 
 ## 实例二：01 背包问题
 
-　　有 N 件物品和一个容量为 V 的背包。第 i 件武平的价格（即体积，下同）为 w[i]，价值为 c[i]。求解将哪些武平装入背包可使这些物品的费用总和不超过背包容量，且价值总和最大。
+　　有 N 件物品和一个容量为 V 的背包。第 i 件物品的价格（即体积，下同）为 w[i]，价值为 c[i]。求解将哪些武平装入背包可使这些物品的费用总和不超过背包容量，且价值总和最大。
 
 　　这是最基本的背包问题，总的来说就是：选还是不选，这是个问题。
 
@@ -238,7 +238,7 @@ public class KnapsackProblem {
 
     private static int cw;// 当前的重量
     private static int cp;// 当前的价值
-    static int bestp;//目前最优装载的价值
+    static int bestp;// 目前最优装载的价值
     private static int r;// 剩余物品的价值
 
     private static int[] cx;//存放当前解
