--- a/OpenSourceLibrary/开源库常见问题.md
+++ b/OpenSourceLibrary/开源库常见问题.md
@@ -8,7 +8,7 @@
 
 | 名称                                                         | 概要                                                | 详情                                                         |
 | ------------------------------------------------------------ | --------------------------------------------------- | ------------------------------------------------------------ |
-| [Retrofit2.0]()                                              | 以接口/注解的形式定义请求和响应                     | Square 开源的项目。是一套 RESTful 家口的 Android(Java) 客户端实现，基于注解，提供 JSON to POJO(Plain Ordinary Java Object，简单的 Java 对象)，POJO to JSON，网络请求（POST,GET,PUT,DELETE等）封装。本身的网络核心可以替换，如 Apache HTTP Client,URL connection,OKHTTP 等，数据解析核心也可以替换如 Gson,Jackson,fastjson,xStream等。力求用最少的代码，实现最强大的功能。 |
+| [Retrofit2.0]()                                              | 以接口/注解的形式定义请求和响应                     | Square 开源的项目。是一套 RESTful 接口的 Android(Java) 客户端实现，基于注解，提供 JSON to POJO(Plain Ordinary Java Object，简单的 Java 对象)，POJO to JSON，网络请求（POST,GET,PUT,DELETE等）封装。本身的网络核心可以替换，如 Apache HTTP Client,URL connection,OKHTTP 等，数据解析核心也可以替换如 Gson,Jackson,fastjson,xStream等。力求用最少的代码，实现最强大的功能。 |
 | [okhttp](https://github.com/square/okhttp)                   | 一个为安卓和 java 应用诞生的 Http+SPDY 的网络处理库 | square 开源项目。支持 HTTP,HYTTPS,HTTP/2.0 和 SPDY 协议；自动缓存数据，节省流量；内部自动 GZIP 压缩内容。 |
 | [android-async-http](https://github.com/loopj/android-async-http) | 一个异步的 AndroidHttp 库                           | 比较经典的网络请求库，基于 Apache 的 HttpClient 库实现，但是由于 Android M(6.0)去除了对 HttpClient 相关 API，意味着 google 不再推荐使用。 |
 | [Volley](https://github.com/mcxiaoke/android-volley)         | 一个能让 Android 的网络请求更简单快捷的 Http 库     | Volley 集成了 AsyncHttpClient 和 Universal-Image-Loader 的优点，既可以像 AsyncHttpClient 一样非常简单地进行 HTTP 通信，也可以像 Universal-Image-Loader 一样轻松加载网络上的图片。但是对大数据量的网络操作如文件的下载支持较差。 |
@@ -20,21 +20,21 @@
 | 名称                                                         | 概要                                  | 详情                                                         |
 | ------------------------------------------------------------ | ------------------------------------- | ------------------------------------------------------------ |
 | [Picasso](https://github.com/square/picasso)                 | 强大的图片下载和缓存库                | Square 开源的项目，主导者是 JakeWharton。不支持 gif 的显示。 |
-| [Glide](https://github.com/bumptech/glide)                   | Google 推荐的图片加载和缓存的库       | 专注于平滑滚动时的流畅加载，Google 开源项目，2014 年 Google I/O 上被推荐 |
-| [Fresco](https://github.com/facebook/fresco)                 | Facebook 推荐的 Android 图片加载库    | 自动管理图片的加载和图片的缓存。Facebook 在 2015 年上半年开源的图片加载库 |
+| [Glide](https://github.com/bumptech/glide)                   | Google 推荐的图片加载和缓存的库       | 专注于平滑滚动时的流畅加载，Google 开源项目，2014 年 Google I/O 上被推荐。 |
+| [Fresco](https://github.com/facebook/fresco)                 | Facebook 推荐的 Android 图片加载库    | 自动管理图片的加载和图片的缓存。Facebook 在 2015 年上半年开源的图片加载库。 |
 | [Android-Universal-Image-Loader](https://github.com/nostra13/Android-Universal-Image-Loader) | 早期广泛使用的开源图片加载库          | 强大又灵活的 Adroid 库，用于加载、缓存、显示图片。           |
 | [Volley](https://github.com/mcxiaoke/android-volley)         | 2013 年 Google I/O 推荐的网络通讯框架 | 使用 Volley 加载网络图片，主要用到其中的 ImageLoader，NetworkImageView 类，注意它不仅仅是个图片加载库。 |
 | [Cube-sdk](https://github.com/etao-open-source/cube-sdk)     | 轻量级的 Android 开发框架             | 高效方便地加载网络图片，更简易地处理网络 API 请求。          |
 
-# 3. OkHttp 原理
+# 3. OkHttp
 
 　　OkHttp 是一个非常强大而有效的网络架构，其主要特点在于：
 
-* 对于同一个主机的所有请求，允许其在 Http /Http2 上共享同一个套接字，这就避免了重复的 TCP 连接带来的 3 次握手的时间。
+* 对于同一个主机的所有请求，允许其在 Http/Http2 上共享同一个套接字，这就避免了重复的 TCP 连接带来的 3 次握手的时间。
 * 对于 Http 协议，其支持连接池用于减少请求延迟。
 * 数据都使用了 gzip 压缩传输，从而减少网络传输 size 的大小。
 * 对响应进行缓存，避免缓存有效期内重复的网络请求。
-* 弱网情况下，在连接失败后，OkHttp 会自动进行重试，特别是有备用地址时还会通过备用地址进行连接。而安全上，其支持新一代的 TLS 功能、SNL 和 ALPN，如果服务器不支持的化则会自动降级到 TLS 1.0。
+* 弱网情况下，在连接失败后，OkHttp 会自动进行重试，特别是有备用地址时还会通过备用地址进行连接。而安全上，其支持新一代的 TLS 功能（HTTPS 的加密功能）、SNI（Server Name Indication，指定了 TLS 握手时要连接的主机名，SNI 协议是为了支持同一个 IP（和端口）支持多个域名） 和 ALPN（Application-Layer Protocol Negptiation，也是 TLS 层的扩展，用于协商应用层使用的协议），如果服务器不支持的化则会自动降级到 TLS 1.0。
 
 ## 3.1. OkHttp 请求网络的流程图
 
@@ -48,7 +48,7 @@
 
 　　在 OkHttpClient 的异步请求时调用的就是 RealCall 的 enqueue() 方法，而 RealCall 的 enqueue() 方法调用的是 OkHttpClient 的 Dispatcher 对象的 enqueue () 方法执行 AsyncCall 的任务。在 Dispatcher 的 enqueue 中如果当前还可以运行线程任务，则将 AsyncCall 任务加入运行队列，并将 AsyncCall 任务放入线程池中去执行，如果不能放入运行队列中，则加入等待队列中。运行队列中的任务完成后会从运行队列中移除任务，如果运行队列中没有了任务，则将等待队列中的任务移到运行队列中。
 
-　　AsyncCall 处理网络请求任务是通过责任链模式来完成的，会先去初始化责任链，责任链初始化完成后，就执行责任链。
+　　AsyncCall 处理网络请求任务是通过责任链模式来完成的，会先去初始化责任链，责任链初始化完成后，就执行责任链，链的就是拦截器。
 
 　　OkHttp 里面的拦截器有：
 
@@ -66,6 +66,78 @@
 
 　　OkHttp 的同步请求调用的是 RealCall 的 execute() 方法，同步请求是直接交给 Dispatcher 来处理请求的，将 RealCall 加入 Dispatcher 的同步队列中，并执行责任链，请求网络得到响应数据，完成后，从同步队列中移除任务。
 
+## 3.3. 自定义拦截器
+
+　自定义拦截器主要的逻辑就是：
+
+1. 实现 Interceptor 接口，重写 intercept(Interceptor.Chain chain) 方法，在使用责任链的时候，可以调用自定义拦截器的处理。
+
+2. 调用 Response response = chain.proceed(request) 调用下一个拦截器，并获取响应结果。
+
+　　下面是一个 log 拦截器的实现，在 intercept 的操作分为三部分：
+
+1. 获取请求信息，打印
+2. 调用下一个拦截器
+3. 获取响应信息，打印
+
+```java
+    /**
+     * 打印日志使用
+     */
+    public static final class LoggerInterceptor implements Interceptor {
+        private String tag;
+
+        public LoggerInterceptor(String tag) {
+            this.tag = tag;
+        }
+		
+        // 重写 intercept 方法
+        @Override
+        public Response intercept(Chain chain) throws IOException {
+            // 1.获取请求信息，打印
+            Request request = chain.request();
+
+            long t1 = System.nanoTime();
+            LogUtil.i(tag, String.format("Sending request %s on %s%n%s\n%s",
+                    request.url(), chain.connection(), request.headers(), request.body()));
+			// 2. 调用下一个拦截器
+            // response 就是响应信息
+            Response response = chain.proceed(request);
+			// 3. 获取响应信息，打印
+            long t2 = System.nanoTime();
+            LogUtil.i(tag, String.format("Received response for %s in %.1fms%n%s\n%s",
+                    response.toString(), (t2 - t1) / 1e6d, response.headers(),response.body()));
+            return response;
+        }
+    }
+```
+
+### 3.3.1. 使用自定义拦截器
+
+　　使用自定义拦截器是通过 OkHttpCilent.Builder() 来配置的，有两种方式：
+
+1. addInterceptor()
+
+```java
+client = new OkHttpClient.Builder()
+        .addInterceptor(new LoggerInterceptor())
+        .build();
+```
+
+　　addInterceptor() 方法无需担心中间响应，例如重定向和重试。即使从缓存提供 HTTP 响应，也会被调用一次。遵守应用程序的原始意图，不关心 OkHttp 注入的标头，例如 If-None-Match，允许短路不被调用 chain.proceed()，也允许重试并多次调用 chain.proceed()。
+
+2. addNetworkInterceptor()
+
+```java
+client = new OkHttpClient.Builder()
+        .addNetworkInterceptor(new LoggerInterceptor())
+        .build();
+```
+
+　　addNetworkInterceptor() 方法能够对诸如重定向和重试之类的中间响应进行操作，在读取缓存时不会被调用到，可以观察具体的请求数据，就像通过网络传输数据一样带有请求的访问 Connection。
+
+　　addInterceptor 和 addNetworkInterceptor 主要的区别是 addInterceptor 是最先执行的拦截器，addNetworkInterceptor 是在 ConnectInterceptor 之后执行的拦截器。
+
 # 4. Retrofit
 
 　　Retrofit 是一个网络请求框架的封装。网络请求的工作本质上是 OkHttp 完成的，而 Retrofit 仅负责网络请求接口的封装。
@@ -74,7 +146,7 @@
 
 ## 4.1. Retrofit 原理
 
-　　Retrofit 的主要原理是利用了 Java 的动态代理技术，把 ApiService 的方法调用集中到了 InvocationHandler.invoke，再构建了 ServiceMethod 、OkHttpClient，返回 callAdapter.adapter 的结果。
+　　Retrofit 的主要原理是利用了 Java 的动态代理技术，把 ApiService 的方法调用集中到了 InvocationHandler.invoke，构建了 ServiceMethod 、OkHttpClient，返回 callAdapter.adapter 的结果。
 
 　　Retrofit 的最大特点就是解耦。
 
@@ -82,7 +154,7 @@
 
 ![](Retrofit/image/retrofit源码流程图.png)
 
-使用
+　　构建 Retrofit 对象：
 
 ```java
 //构建 OkHttpClient 对象
@@ -101,7 +173,7 @@ Retrofit retrofit = new Retrofit.Builder()
                 .build();
 ```
 
-
+　　请求接口：
 
 ```java
 public interface ApiService {
@@ -133,7 +205,7 @@ public interface ApiService {
 }
 ```
 
-
+　　请求数据：
 
 ```java
 // 获取 API 实例
@@ -142,9 +214,10 @@ ApiService service = retrofit.create(ApiService.class);
 Observable<ApiService.BaseResponse> observable = service.getMessage(1);
 ```
 
-retrofit.create 源码
+　　retrofit.create 源码：
 
 ```java
+// Proxy.newProxy() 的 InvocationHandler 的 invoke() 方法
 ServiceMethod<Object, Object> serviceMethod =
                 (ServiceMethod<Object, Object>) loadServiceMethod(method);
 // 再包装成 OkHttpCall
