--- a/network/网络常见问题.md
+++ b/network/网络常见问题.md
@@ -20,6 +20,19 @@
 8. TRACE：追踪路径，回显服务器收到的请求，主要用于测试或诊断。
 9. PATCH：是对 PUT 方法的补充，用于已知资源进行局部更新。
 
+## 1.3. POST 与 PUT 的区别
+
+　　POST 是用来提交数据的。提交的数据放在 HTTP 请求的正文里，目的在于提交数据并用于服务器端的存储，而不允许用户过多的更改相应数据（主要是相对于在 url 修改要麻烦很多)。(提交答案的接口是 POST)
+
+　　PUT 操作是幂等的。所谓幂等是指不管进行多少次操作，结果都一样。比如用 PUT 修改一篇文章，然后在做同样的操作，每次操作后的结果并没有不同。（反馈视频是否有用的接口是 PUT）
+
+　　POST 操作既不是安全的，也不是幂等的，比如常见的 POST 重复加载问题：当多次发出同样的 POST 请求后，其结果是创建出了若干的资源。
+
+　　安全和幂等的意义在于：当操作没有达到预期的目标时，可以不停的重试，而不会对资源产生副作用。从这个意义上说，POST 操作往往是有害的，但很多时候还是不得不使用它。
+
+　　还有一点需要注意的就是，创建操作可以使用 POST，也可以使用 PUT，区别在于 POST 是作用在一个集合资源之上的（/articles），而 PUT 操作是作用在一个具体资源之上的（/articles/123），
+再通俗点说，如果 URL 可以在客户端确定，那么就使用 PUT，如果是在服务端确定，那么就使用 POST，比如说很多资源使用数据库自增主键作为标识信息，而创建的资源的标识信息到底是什么只能由服务端提供，这个时候就必须使用 POST。
+
 # 2. HTTP 和 HTTPS 的区别
 
 1. HTTP 是超文本传输协议，信息是明文传输，数据都是未加密的，安全性较差，连接很简单，是无状态的；HTTPS 协议是由 SSL+HTTP 协议构建的具有安全性的传输协议，数据传输过程是加密的，安全性较好。
