--- a/plan/简历/智慧课堂.md
+++ b/plan/简历/智慧课堂.md
@@ -1,10 +1,286 @@
-## 智慧课堂
+# 智慧课堂
 
-* 内存泄漏检测：leakcanary 开源库
+# 1. 平板管控功能
 
-  `Activity` 自动监听是通过 `Application#registerActivityLifecycleCallbacks` 绑定监听，应用内所有的 `Activity` 在 `onDestory` 时监听 `Activity` 对象。Fragment 依赖于 Activity，Fragment 监听依赖于 `FragmentManager` ；在 Activity 创建时，将 Fragment 生命周期监听注册进去；当 Fragment 的 `FragmentViewDestory` `FragmentDestory` 时，监听 `FragmentView` `Fragment` 对象；
+## 1.1. 功能描述
 
-* butterknife
+　　老师端设置应用白名单，白名单的应用可以打开，不在白名单中的应用拒绝打开。
 
-  通过注解的方式来替代android中view的相关操作。
+## 1.2. 功能点
+
+　　进程保活
+
+## 1.3. 功能实现
+
+　　会在在主程序 onCreate() 会调用中开启 ManagerAppService服务。ManagerAppService 服务管理平板管控的规则更新、打开应用、启动管控等消息的处理。
+
+　　检查管控规则变化的地方：
+
+1. 在 onCreate() 中开启管控，将一些默认的应用加入白名单。
+2. 会间隔一天从外网获取管控规则，检查管控规则是否有变化。
+3. RabbitMQ 发送消息过来，开启管控或者检查管控规则变化。
+4. 开始上课时，使用内网再次检查管控。
+
+　　如果 ManagerAppService接收到管控规则更新的信息，就开启 UpdateRuleService 服务，UpdateRuleService 服务是在一个单独的进程中，接收到管控规则更新的消息后，会去请求新的管控规则，将其与旧的管控规则进行对比，如果与旧的规则不同，则将其保存到 ContentProvider 中（这个数据库是给系统使用的，如果在白名单就允许安装，如果不在白名单就不允许安装）和 SharedPreferences 中（应用自己使用）。
+
+　　打开管控后，会注册 FrameworkReceiver 广播接收器，这是一个自己与系统开发人员定制的广播接收器，当打开一个应用时，FrameworkReceiver 就会接收到消息，然后将消息传递给 ManagerAppService 服务中去，ManagerAppService收到消息，会判断打开应用是否在白名单中，如果在，不拦截打开应用并且设置应用可以使用 wifi（反射调用 WifiManager 的 setWifiDataRule 方法），如果不在，则强制停止应用（反射调用 ActivityManager 的 forceStopPackage 方法），并弹出 toast 提示用户 “ 此应用已被禁用 ”，并且设置应用不可以打开 wifi。
+
+　　因为 ManagerAppService 需要处理管控的操作，所以就需要在应用退出到后台， ManagerAppService 也能够在存活，在用户点击其他应用时，对应用进行管控。
+
+　　为了尽可能提高 ManagerAppService 保活，使用了 双进程守护 + 前台服务 + JobScheduler 三种手段来处理。
+
+　　KeepLiveService 继承 JobService，在 onStartJob 中检查 ManagerAppService 时候存活，如果不，则启动 ManagerAppService 服务，在 ManagerAppService 的 onStartCommand() 方法中启动并绑定 KeepLiveService ，在绑定断开的时候再次启动并绑定 KeepLiveService。
+
+# 2. HTML 解析
+
+[Java开源Html解析类库](http://blog.chinaunix.net/uid-20767210-id-1849644.html)
+
+[java开源HTML解析器收集](https://blog.csdn.net/xiaomin1991222/article/details/50980475)
+
+[开源Html分析器解析库对比](https://www.jdon.com/45938)
+
+[支付宝 Android 版使用的开源组件](https://www.jianshu.com/p/844e338319af)
+
+[TagSoup开发指南](https://blog.csdn.net/iteye_7356/article/details/82071981)
+
+## 1.1. 功能描述
+
+　　题目数据是 html 格式的数据，需要解析数据。
+
+## 1.2. 功能点
+
+　　TagSoup
+
+## 1.3. 功能实现
+
+　　题目解析采用的是 TagSoup 开源库来解析题目的内容，根据不同的 html 标签来自定义题目的显示需求。
+
+　　TagSoup 是 Java 语言开发的，通过 SAX 引擎解析结构糟糕、令人抓狂的不规范 HTML 文档的小工具。TagSoup 可以将一个 HTML 文档转换为结构良好的 XML 文档（近似于XHTML），方便开发人员对获取的 HTML 文档进行解析等操作。
+
+　　使用 TagSoup 的开发流程：
+
+1. 创建 Parser 实例；
+2. 提供自己的 SAX2 内容处理器
+3. 提供只想需要解析的 HTML 的 InputSource 实例；
+4. 开始 parse（）！
+
+　　TagSoup 包含 2 个包、16 个类文件（文件数目还是比较少的，但是功能很强大！）。其中核心类包括 Parser、PYXScanner、XMLWriter。
+
+1. org.ccil.cowan.tagsoup.Parser，该类继承自 org.xml.sax.helpers.DefaultHandler，可知该类是一个 SAX 型的解析器；
+2. org.ccil.cowan.tagsoup.PYXScanner，该类实现了 Scanner 接口，用于读取解析后的内容；
+3. org.ccil.cowan.tagsoup.XMLWriter，该类继承自 org.xml.sax.helpers.XMLFilterImpl，同时实现 org.xml.sax.ContentHandler 接口（这个是最主要的），也就是说 XMLWriter 是 TagSoup 提供的 HTML 解析成 XML 文档的默认实现。
+
+　　那么找到了这三个核心类，就按照上面的流程开始解析吧，以下是一个小例子：
+
+```java
+StringReader xmlReader = new StringReader("");
+StringReader sr = new StringReader(html);
+InputSource src = new InputSource(sr);// 构建 InputSource 实例
+Parser parser = new Parser();//实例化Parse
+XMLWriter writer = new XMLWriter();//实例化 XMLWriter，即 SAX 内容处理器
+parser.setContentHandler(writer);//设置内容处理器
+parser.parse(src);//解析
+Scanner scan = new PYXScanner();
+scan.scan(xmlReader, parser);//通过xmlReader读取解析后的结果
+char[] buff = new char[1024];
+while(xmlReader.read(buff) != -1) {
+    System.out.println(new String(buff));//打印解析后的结构良好的HTML文档
+} 
+```
+
+　　项目中的使用：
+
+```java
+Parser parser = new Parser(); // 实例化 Parse
+parser.setContentHandler(new MyContentHandler()); // 设置内容处理器
+parser.parse(new InputSource(new StringReader(html))); // 解析
+```
+
+```java
+public class MyContentHandler implements ContentHandler {
+
+    private static final String TAG = SpanContentHandler.class.getSimpleName();
+
+    /**
+     * 接收一个用于定位 SAX 文档事件源的对象
+     *
+     * @param locator
+     */
+    @Override
+    public void setDocumentLocator(Locator locator) {
+        Log.d(TAG, "setDocumentLocator");
+    }
+
+    /**
+     * 接收文件开始的通知
+     *
+     * @throws SAXException
+     */
+    @Override
+    public void startDocument() throws SAXException {
+        Log.d(TAG, "startDocument");
+    }
+
+    /**
+     * 接收文档结束的通知
+     *
+     * @throws SAXException
+     */
+    @Override
+    public void endDocument() throws SAXException {
+        Log.d(TAG, "endDocument");
+    }
+
+    /**
+     * 开始前缀 URI 命名空间映射的范围。
+     *
+     * @param prefix
+     * @param uri
+     * @throws SAXException
+     */
+    @Override
+    public void startPrefixMapping(String prefix, String uri) throws SAXException {
+        Log.d(TAG, "startPrefixMapping prefix:" + prefix + ",uri:" + uri);
+    }
+
+    /**
+     * 结束前缀 URI 映射的范围
+     *
+     * @param prefix
+     * @throws SAXException
+     */
+    @Override
+    public void endPrefixMapping(String prefix) throws SAXException {
+        Log.d(TAG, "endPrefixMapping prefix:" + prefix);
+    }
+
+    /**
+     * 接收元素开始的通知
+     *
+     * @param uri
+     * @param localName
+     * @param qName
+     * @param atts
+     * @throws SAXException
+     */
+    @Override
+    public void startElement(String uri, String localName, String qName, Attributes atts) throws SAXException {
+        Log.d(TAG, "startElement uri:" + uri + ",localName:" + localName + ",qName:" + qName + ",atts:" + atts);
+        // tag.equalsIgnoreCase("p") 判断不同标签
+        // 根据不同标签进行处理
+    }
+
+    /**
+     * 接收元素结束的通知
+     *
+     * @param uri
+     * @param localName
+     * @param qName
+     * @throws SAXException
+     */
+    @Override
+    public void endElement(String uri, String localName, String qName) throws SAXException {
+        Log.d(TAG, "endElement uri:" + uri + ",localName:" + localName + ",qName:" + qName);
+        // tag.equalsIgnoreCase("p") 判断不同标签
+        // 根据不同标签进行处理
+    }
+
+    /**
+     * 接收字符数据通知。
+     *
+     * @param ch
+     * @param start
+     * @param length
+     * @throws SAXException
+     */
+    @Override
+    public void characters(char[] ch, int start, int length) throws SAXException {
+        Log.d(TAG, "characters ch:" + Arrays.toString(ch) + ",start:" + start + ",length:" + length);
+        // 对字符进行过滤或者处理
+    }
+
+    /**
+     * 接收元素内容中可忽略空白的通知
+     *
+     * @param ch
+     * @param start
+     * @param length
+     * @throws SAXException
+     */
+    @Override
+    public void ignorableWhitespace(char[] ch, int start, int length) throws SAXException {
+        Log.d(TAG, "ignorableWhitespace ch:" + Arrays.toString(ch) + ",start:" + start + ",length:" + length);
+    }
+
+    /**
+     * 接收处理指令的通知
+     *
+     * @param target
+     * @param data
+     * @throws SAXException
+     */
+    @Override
+    public void processingInstruction(String target, String data) throws SAXException {
+        Log.d(TAG, "processingInstruction target:" + target + ",data：" + data);
+    }
+
+    /**
+     * 接收跳过实体的通知
+     *
+     * @param name
+     * @throws SAXException
+     */
+    @Override
+    public void skippedEntity(String name) throws SAXException {
+        Log.d(TAG, "skippedEntity name:" + name);
+    }
+
+}
+```
+
+## 1.4. 解析 xml 文件的四种方式
+
+https://www.cnblogs.com/duzhentong/p/7816534.html
+
+1. DOM（Document Object Model），它把整个 XML 文档当成一个对象加载到内存，不管文档有多大。它一般处理小文件。
+
+   Dom 解析是将 xml 文件全部载入，组装成一颗 DOM 树（树状结构），然后通过节点以及节点之间的关系来解析 xml 文件。由于 DOM 这种在加载的时候需要把文件全部加载进内存才可以进行解析的方式，也带来了问题，在 xml 文件小的情况下可以使用，当一个 xml 文件相当大的时候，对计算机资源的消耗也是一个不小的开销。
+
+2. SAX(Simple API for XML)，它的处理过程像流媒体。它不会把整个文档加载到内存，它是读一点处理一点。一般用它处理比较大的文件。
+
+   sax 这种解析方式在官方的解释是类似于流媒体的方式。可以简单的总结为，sax 方式可以做到一边扫描文档，一边解析文档，不用把文件加载到内存中，相比于 DOM 解析方式，SAX 方式对于大型的文件是一种很好的解决办法，减少了对内存的消耗。还有就是 SAX 解析方式是一种基于事件的方式，在解析 xml 文件的时候就是触发了一系列的事件，当遇到用户给定的标签的时候，会停止解析，这样在时间和空间上都是优于 DOM 解析的（DOM 解析需要把文档全部加载进内存才能开始解析）。
+
+   要使用 SAX 解析首先要创建触发器这个类，要创建这个类首先需要继承 DefaultHandler，重写方法。
+
+   xml 文件被 SAX 解析器载入，由于 SAX 解析是按照 xml 文件的顺序来解析，当最开始读取 xml 文档的时候，会调用 startDocument() 方法，当读入标签（如< school >）的时候，由于它是个 ElementNode，所以会调用 startElement(String uri, String localName, String qName, Attributes attributes)  方法，其中第二个参数就是节点的名称，注意：由于有些环境不一样，有时候第二个参数有可能为空，所以可以使用第三个参数，因此在解析前，先调用一下看哪个参数能用，第 4 个参数是这个节点的属性。
+
+3. JDOM，它里面包含了以上的两种方式，为减少 DOM、SAX 的编码量，出现了 JDOM。
+
+   优点：20-80 原则，极大减少了代码量。
+
+   使用场合：要实现的功能简单，如解析、创建等，但在底层，JDOM 还是使用 SAX（最常用）、DOM、Xanan 文档。
+
+   JDOM 也是将 xml 件构建成一个树状结构，实现解析，所以代码和 DOM 很像，但是 JDOM 自身不包含解析器。它通常使用 SAX2 解析器来解析和验证输入 XML 文档，所以可以说 JDOM 是 DOM 和 SAX 的一个结合体也差不多，把 SAX 和 DOM 的功能有效地结合起来。实现了解析 xml 文档的功能。
+
+4. DOM4J，它也包含了前两种方式，DOM4J 是一个非常非常优秀的 Java XML API，具有性能优异、功能强大和极端易用使用的特点，同时它也是一个开放源代码的软件。如今越来越多的 Java 软件都在使用 DOM4J 来读写 XML，特别值得一提的是连 Sun 的 JAXM 也在用 DOM4J。
+
+   DOM4J 是目前使用最广泛的，hibernate 框架使用的解析方式就是 DOM4J，DOM4J 使用接口和抽象基本类方法，在代码上也容易理解（在使用 DOM4J 时需要下载 jar 包）。
+
+　　其中 DOM 和 SAX 都是 java 的标准，也就是 java 本身就提供标准的 API，不需要下载其他包，但是它的 API 都是一些底层的实现，不是很好用。所以有人在它们的基础上封装了一下，就有了 DOM4j 和 JDOM。
+
+　　DOM4J 性能最好，连 SUN 的 JAXM 也在用 DOM4J，Hibernate 也用 DOM4J。
+
+　　DOM4J 对 Xpath 也有很好的支持（xpath是在xml文件中找到特定节点路径表达式）。
+
+# 3. 内存泄漏检测：leakcanary 开源库
+
+　　`Activity` 自动监听是通过 `Application#registerActivityLifecycleCallbacks` 绑定监听，应用内所有的 `Activity` 在 `onDestory` 时监听 `Activity` 对象。Fragment 依赖于 Activity，Fragment 监听依赖于 `FragmentManager` ；在 Activity 创建时，将 Fragment 生命周期监听注册进去；当 Fragment 的 `FragmentViewDestory` `FragmentDestory` 时，监听 `FragmentView` `Fragment` 对象。
+
+## 3.1. 为什么 leakCanary 可以检测内存泄漏
+
+https://blog.csdn.net/wangjiang_qianmo/article/details/83069467
+
+# 4. butterknife
+
+通过注解的方式来替代android中view的相关操作。
 
