--- a/项目信息/项目信息收集.md
+++ b/项目信息/项目信息收集.md
@@ -7,7 +7,7 @@ flutter-deer 是 flutter 练习项目。包括完整 UI 设计图，更贴近真
 编写第一个 Flutter 应用（第一篇）
 4. https://mp.weixin.qq.com/s/Utx2HiAdxqdrJLWq5-DASw 编写第一个 Flutter 应用（第二篇）
 
-## 视频
+## 音视频
 1.https://mp.weixin.qq.com/s/BOkaNcPQWKkeAS1it3aE-w
 Android 音视频系列：视频容器操作篇--mp4 容器打包实现
 
