--- a/Android/Software/多渠道打包.md
+++ b/Android/Software/多渠道打包.md
@@ -44,7 +44,7 @@
 #### 友盟打包实现步骤
 1. 按照 umeng 的要求，manifest 文件中需要有
 
-```
+```groovy
 <meta-data
  android:name="UMENG_CHANNEL"
  android:value="${UMENG_CHANNEL_VALUE}" />
@@ -53,7 +53,7 @@
 
 2. 在 module（一般也就是 app）的 build.gradle 的android{} 中添加如下内容：
 
-```
+```groovy
 productFlavors{
           wandoujia{
              manifestPlaceholders = [UMENG_CHANNEL_VALUE: "wandoujia"]
@@ -67,7 +67,7 @@ productFlavors{
 
 3. 优化1：上面只是两个渠道，如果有几十个渠道，都这样写，重复的东西太多，观察到每个渠道就是 flavor 的名称，所以修改如下：
 
-```
+```groovy
 productFlavors{
   wandoujia{
       //manifestPlaceholders = [UMENG_CHANNEL_VALUE: "wandoujia"]
@@ -83,7 +83,7 @@ productFlavors{
 
 4. 优化2：上面经过签名打包后生成的 apk 的名称是有默认命名规则的，如：xxx-xiaomi-release.apk 但是我们想包含版本信息如：xxx-xiaomi-release-1.0.apk ,所以最终打包脚本如下：
 
-```
+```groovy
 productFlavors{
     wandoujia{
         //manifestPlaceholders = [UMENG_CHANNEL_VALUE: "wandoujia"]
@@ -110,7 +110,7 @@ productFlavors{
 
 　　在代码中我们可以通过读取 mate-data 信息来获取渠道，然后添加到请求参数中，获取方法如下：
 
-```
+```java
 private String getChannel() {
    try {
        PackageManager pm = getPackageManager();
