--- a/DesignPatterns/关于设计模式的常见问题.md
+++ b/DesignPatterns/关于设计模式的常见问题.md
@@ -376,3 +376,47 @@ After say hello...
 
 # 2. 替换多重嵌套的if else写法
 
+https://blog.csdn.net/u010375903/article/details/81192507
+
+https://blog.csdn.net/weixin_33751566/article/details/91387462
+
+使用工厂模式来实现对多重嵌套的 if else 的替换。
+
+根据不同的条件，使用不同的方法。
+
+```java
+@Override
+    public void onClick(View view) {
+        int i = view.getId();
+        if (i == R.id.tv_forget_gestrue_pwd) {
+            showForgetGesturePasswordTips();
+ 
+        } else if (i == R.id.tv_other_account_login) {
+            showSwitchAccountsTips();
+ 
+        }
+    }
+```
+
+```java
+public class StrategyFactory {
+    public static final int KEY_GESTURE_PWD = R.id.tv_forget_gestrue_pwd;
+    public static final int KEY_OTHER_ACCOUNT_LOGIN = R.id.tv_other_account_login;
+ 
+    private static StrategyFactory factory = new StrategyFactory();
+    private StrategyFactory(){
+    }
+    private static Map<Integer,Strategy> strategyMap = new HashMap<Integer,Strategy>();
+    static{
+        strategyMap.put(KEY_GESTURE_PWD, new GesturePwdStrategy());
+        strategyMap.put(KEY_OTHER_ACCOUNT_LOGIN, new OtherAccountLoginStrategy());
+    }
+    public Strategy creator(int pType){
+        return strategyMap.get(pType);
+    }
+    public static StrategyFactory getInstance(){
+        return factory;
+    }
+}
+```
+
