--- a/OpenSourceLibrary/开源库常见问题.md
+++ b/OpenSourceLibrary/开源库常见问题.md
@@ -444,7 +444,7 @@ https://blog.csdn.net/qq_35651451/article/details/88665127
 
 　　MQ 的模型：所有 MQ 产品从模型抽象上来说都是一样的过程，消费者（ consumer ）订阅某个队列。生产者 ( producer ) 创建消息，然后发布到队列（queue）中，最后将消息发送到监听的消费者。
 
-![](J:/zhangmiao/android_learning_notes/OpenSourceLibrary/MessageQueue/image/MQ模型.png)
+![](MessageQueue/image/MQ模型.png)
 
 　　MQ 常用于业务解耦的情况，其他常见使用场景包括最终一致性、广播、错峰流控等等。
 
