--- a/DataStructure/算法/查找算法/二分查找.md
+++ b/DataStructure/算法/查找算法/二分查找.md
@@ -15,7 +15,7 @@
 
 ## 2. 代码描述
 
-　　先设定 begin=0,end=length-1，mid = begin+(end-begin)/2，标胶 mid 的值与 key 的大小。
+　　先设定 begin=0,end=length-1，mid = begin+(end-begin)/2，标记 mid 的值与 key 的大小。
 
 　　如果相同，返回 index。
 
