--- a/OpenSourceLibrary/开源库常见问题.md
+++ b/OpenSourceLibrary/开源库常见问题.md
@@ -100,10 +100,10 @@
             long t1 = System.nanoTime();
             LogUtil.i(tag, String.format("Sending request %s on %s%n%s\n%s",
                     request.url(), chain.connection(), request.headers(), request.body()));
-			// 2. 调用下一个拦截器
+						// 2. 调用下一个拦截器
             // response 就是响应信息
             Response response = chain.proceed(request);
-			// 3. 获取响应信息，打印
+						// 3. 获取响应信息，打印
             long t2 = System.nanoTime();
             LogUtil.i(tag, String.format("Received response for %s in %.1fms%n%s\n%s",
                     response.toString(), (t2 - t1) / 1e6d, response.headers(),response.body()));
@@ -269,7 +269,7 @@ Glide.with(Context context).load(Strint url).into(ImageView imageView);
 
    DataFetcher 是用于延迟检索加载资源的数据的接口。方法 loadData() 用于异步从解码资源中获取数据。
 
-3. into() 方法主要分为三个部分：1. 请求数据；2. 将请求的数据解析转换为图片格式；3. 将图片显示到 ImageView 上。into() 方法会创建 Target 对象（负责将占位符，错误占位图，图片显示在 ImageView 上，就是控制 view 的显示）和创建 GenericRequest 对象（负责请求和请求回调），1. 请求数据：GenericRequest 会创建 EngineJob 对向获取数据，EngineJob 对象会在线程池中运行获取数据的操作，获取数据的时候会先从缓存中获取，如果缓存中没有，则从资源中获取，在资源中获取数据是调用的 DataFetcher 的 loadData() 方法。2.解析数据：获得数据后调用 ResourceDecoder 类的 decode() 方法解析数据，并且会对图片进行压缩、旋转、圆角等处理，数据转换成了 Bitmap 或者 Gif 数据格式，最后会将 Bitmap 和 Gif 数据封装到 GifBitmapWrapper 中，会将获取到的 Resource 数据进行缓存。3.显示图片：将 GifBitmaoWrapper 转换为 Bitmap 或者 Gif 可以直接使用的数据后，会采用 handler 向主线程发送 Message 消息将结果传给主线程，在消息处理中会调用到 ImageViewTarget 的 setResource() 方法将图片显示到控件上。
+3. into() 方法主要分为三个部分：1. 请求数据；2. 将请求的数据解析转换为图片格式；3. 将图片显示到 ImageView 上。into() 方法会创建 Target 对象（负责将占位符，错误占位图，图片显示在 ImageView 上，就是控制 view 的显示）和创建 GenericRequest 对象（负责请求和请求回调），1. 请求数据：GenericRequest 会创建 EngineJob 对向获取数据，EngineJob 对象会在线程池中运行获取数据的操作，获取数据的时候会先从缓存中获取，如果缓存中没有，则从资源中获取，在资源中获取数据是调用的 DataFetcher 的 loadData() 方法。2.解析数据：获得数据后调用 ResourceDecoder 类的 decode() 方法解析数据，并且会对图片进行压缩、旋转、圆角等处理，数据转换成了 Bitmap 或者 Gif 数据格式，最后会将 Bitmap 和 Gif 数据封装到 GifBitmapWrapper 中，会将获取到的 Resource 数据进行缓存。3.显示图片：将 GifBitmapWrapper 转换为 Bitmap 或者 Gif 可以直接使用的数据后，会采用 handler 向主线程发送 Message 消息将结果传给主线程，在消息处理中会调用到 ImageViewTarget 的 setResource() 方法将图片显示到控件上。
 
 4. Glide 缓存机制
 
@@ -360,6 +360,12 @@ http://url.com/image.jpg?token=d9caa6e02c990b0a
 
 https://blog.csdn.net/qq_35651451/article/details/88665127
 
+## 5.5. Glide是如何加载Gif图片的
+
+[原来Glide是这样加载GIF图的](https://blog.csdn.net/Coo123_/article/details/106428226)
+
+一帧一帧的获取，向主线程发消息刷新界面，绘制当前帧的图像。
+
 # 6. RxJava 原理
 
 　　RxJava 就是一个实现异步操作的库。
@@ -398,7 +404,7 @@ https://blog.csdn.net/qq_35651451/article/details/88665127
 
 ## 6.2. 基本原理
 
-1. RxJava 主要采用的是观察者模式，Obervable 作为被观察者，负责接收原始的 Observable 发出的事件，并在处理后发送给 Observer，Observer 作为观察者。
+1. RxJava 主要采用的是观察者模式，Observable 作为被观察者，负责接收原始的 Observable 发出的事件，并在处理后发送给 Observer，Observer 作为观察者。
 
 2. Observable 并不是在创建的时候就立即开始发送事件，而是在它被订阅的时候，也就是 subscribe() 方法执行的时候开始。
 
@@ -427,6 +433,14 @@ https://blog.csdn.net/qq_35651451/article/details/88665127
 　　发送和处理速度不统一：例如生产者生产的产品放置到缓存队列中，供消费者消费。若生产者生产的速度大于消费者消耗的速度，则会出现缓存队列溢出的问题。
 
 　　背压是一种流速控制即解决策略，例如背压中的丢弃策略，一旦发现缓存队列已满，为了整个过程顺利进行，则会丢弃最新产生的产品，避免溢出，因此背压也是一种流速控制的解决策略。
+
+### 6.3.1. RxJava 如何解决的背压问题
+
+RxJava 2.0 提供了背压策略。
+
+
+
+
 
 # 7. RabbitMQ 知识
 
