--- a/network/网络常见问题.md
+++ b/network/网络常见问题.md
@@ -7,6 +7,7 @@
 1. GET 方法用于信息获取，它对于数据库方面是安全的（没有修改信息），而 POST 方法是用于修改服务器上资源的请求。
 2. GET 请求的数据会附在 URL 之后，而 POST 方法提交的数据则放置在 HTTP 报文实体的实体中，所以 POST 方法的安全性比 GET 方法要高。
 3. GET 方法传输的数据量一般限制在 2 KB，其原因在于：GET 通过 URL 提交数据，而 URL 本身对数据没有限制，但是不同的浏览器对于 URL 是有限制的，真正的限制取决于操作系统本身；而 POST 方法对于数据大小是无限制的，真正影响到数据大小的是服务器处理程序的能力。
+4. GET 请求是幂等的（反复读取不应该对访问的数据有副作用），可以对 GET 请求返回的数据进行缓存；而 POST  请求不是幂等的，因此也就不能做缓存。
 
   https://www.zhihu.com/question/28586791，
 
@@ -468,7 +469,7 @@ http/2.0简介 https://blog.csdn.net/lhZero_F/article/details/89356674
 ## 12.1. 客户端验证证书安全性过程
 
 1. 当客户端收到这个证书之后，使用本地配置的权威机构的公钥对证书进行解密得到服务器的公钥和证书的数字签名，数字签名经过 CA 公钥解密得到证书信息摘要。
-2. 然后证书签名的方法计算一下当前证书的信息摘要，与收到的信息摘要作对比，如果一样，表示证书一定是服务器下发的，没有被中间人篡改过，因为中间人虽然有权威机构的公钥，能够解析证书内容并篡改，但是篡改完成之后中间人需要将证书重新加密，但是中间人没有权威机构的私钥，无法加密，强行加密只会导致客户端无法解密，如果中间人强行乱修改证书，就会导致证书内容和证书签名不匹配。
+2. 然后证书签名的方法计算一下当前证书的信息摘要与收到的信息摘要作对比，如果一样，表示证书一定是服务器下发的，没有被中间人篡改过，因为中间人虽然有权威机构的公钥，能够解析证书内容并篡改，但是篡改完成之后中间人需要将证书重新加密，但是中间人没有权威机构的私钥，无法加密，强行加密只会导致客户端无法解密，如果中间人强行乱修改证书，就会导致证书内容和证书签名不匹配。
 
 ## 12.2. SSL 协议主要服务
 
@@ -476,7 +477,142 @@ http/2.0简介 https://blog.csdn.net/lhZero_F/article/details/89356674
 2. 加密数据以防止数据中途被窃取。
 3. 维护数据的完整性，确保数据在传输过程中不被改变。
 
-# 13. DNS解析过程，如果服务器 ip 地址改变了，客户端怎么知道呢
+# 13. DNS 解析过程，如果服务器 ip 地址改变了，客户端怎么知道呢
 
-由最近的 DNS 服务器更新，请求不到时会到 DNS 服务器请求，并更新当前映射。
+通常，DNS 请求的顺序为：浏览器缓存->系统缓存（host文件）->路由器缓存->ISP DNS 缓存。
 
+服务器 ip 地址改变后，获取缓存的 ip 地址将请求不到，就会到 DNS 服务器获取，并更新当前缓存。
+
+# 14. HTTPS 过程 
+
+![](/Users/miaomiao/Desktop/android/android_learning_notes/network/HTTPS/image/https工作原理.png)
+
+1. 客户端发送 HTTPS 请求
+
+   就是用户在浏览器里输入一个 https 网址，然后连接到 server 的 443 端口。
+
+2. 服务端的配置
+
+   采用 HTTPS 协议的服务器必须要有一套数字证书，可以自己制作，也可以向组织申请，区别就是自己颁发的证书需要客户端验证通过，才可以继续访问，而使用受信任的公司申请的证书申请的证书则不会弹出提示页面。
+
+　　这套证书其实就是一对公钥和私钥。
+
+3. 传送证书
+
+   这个证书其实就是公钥，只是包含了很多信息，如证书的颁发机构、过期时间等等。
+
+4. 客户端解析证书
+
+   这部分工作是由客户端的 TLS 来完成的，首先会验证公钥是否有效，比如颁发机构、过期时间等等，如果发现异常，则会弹出一个警告框，提示证书存在问题。
+
+   如果证书没有问题，那么就生成一个随机值，然后用证书对该随机值进行非对称加密。
+
+5. 传送加密信息
+
+   这部分传送的是用证书加密后的随机值，目的就是让服务端得到这个随机值，以后客户端和服务端的通信就可以通过这个随机值进行加密解密了。
+
+6. 服务端解密信息
+
+   服务端用私钥解密后，得到了客户端传过来的随机值（私用），然后把内容通过该值进行对称加密，所谓对称加密就是，将信息和私钥通过某种算法混合在一起，这样除非知道私钥，不然无法获取内容，而正好客户端和服务端都知道这个私钥，所以只要加密算法够彪悍，私钥够复杂，数据就够安全。
+
+7. 传输加密后的信息
+
+　　这部分信息是服务端用私钥加密后的信息，可以在客户端被还原。
+
+8. 客户端解密信息
+
+   客户端用之前生成的私钥解密服务端传过来的信息，于是获取了解密后的内容，整个过程第三方即使监听了数据，也束手无策。
+
+## 14.1. 基本的运行过程
+
+　　HTTPS 默认工作在 TCP 协议 443 端口，它的工作流程一般如以下方式：
+
+1. TCP 三次同步握手
+2. 客户端验证服务器数字证书
+3. DH 算法协商对称加密算法的密钥、hash 算法的密钥
+4. SSL 安全加密隧道协商完成
+5. 网页以加密的方式传输，用协商的对称加密算法和密钥加密，保证数据机密性；用协商的 hash 算法进行数据完整性保护，保证数据不被篡改。
+
+　　SSL/TLS 协议的基本思路是采用公钥加密法，也就是说，客户端先向服务器索要公钥，然后用公钥加密信息，服务器收到密文件后，用自己的私钥解密。
+
+1. 如何保证公钥不被篡改？
+
+   解决方法：将公钥放在数字证书中。只要证书是可信的，公钥就是可信的。
+
+2. 公钥加密计算量太大，如何减少耗用的时间？
+
+   解决方法：每一次对话（seesion），客户端和服务器端都生成一个 “对话密钥”（session key），用它来加密信息。由于 “ 对话密钥 ” 是对称加密，所以运算速度非常快，而服务器公钥只用于加密 “ 对话密钥 ” 本身，这样就减少了加密运算的消耗时间。
+
+## 14.2. SSL/TSL 协议的基本过程
+
+　　SSL/TLS 协议的基本过程是这样的：
+
+1. 客户端向服务器端索要并验证公钥。
+2. 双方协商生成 “ 对话密钥 ”。
+3. 双方采用 “ 对话密钥 ” 进行加密通信。
+
+　　前两步，又称为 “ 握手阶段 ”（handshake）。
+
+## 14.3. SSL、TLS 的握手过程
+
+![](./HTTPS/image/SSL与TLS的握手过程.png)
+
+　　SSL 协议在握手阶段使用的是非对称加密，在传输节点使用的是对称加密，也就是说在 SSL 上传送的数据是使用对称密钥加密的。
+
+　　因为非对称加密的速度缓慢，浪费资源。其实当客户端和主机使用非对称加密方式建立连接后，客户端和主机已经决定好了在传输过程使用的对称加密算法和关键的对称加密密钥，由于这个过程本身是安全可靠的，也即对称加密密钥是不可能被窃取盗用的，因此，保证了在传输过程中对数据进行对称加密也是安全可靠的，因为除了客户端和自己之外，不可能有第三方窃听并解密出对称加密密钥。如果有人窃听通信，它可以知道双方选择的加密方法，以及三个随机数中的两个。整个通话的安全，只取决于第三个随机数（pre-master secret）能不能被破解。
+
+　　第三个随机数 c，又称 “ pre-master key ”。有了它以后，客户端和服务器就同时有了三个随机数，接着双方就用实现商定的加密方法，各自生成本次会话所用的同一把 " session key（会话密钥）"。
+
+　　为什么一定要用三个随机数，来生成 “ 会话密钥 ”，SSL 协议不信任每个主机都能产生完全随机的随机数，如果随机数不随机，那么会话密钥就有可能被猜出来，一个伪随机可能完全不随机，可是三个伪随机就十分接近随机了，每增加一个自由度，随机性增加的可不是一。
+
+　　客户端收到服务器第一次的回应以后，首先验证服务器证书。如果证书不是可信机构颁布、或者证书中的域名与实际域名不一致、或者证书已经过期，就会向访问者显示一个警告，由其选择是否还要继续通信。
+
+　　服务器收到客户端的三个随机数之后，计算生成本次会话所用的 “ 会话密钥 ”。然后，向客户端最后发送下面信息：
+
+1. 编码改变通知，表示随后的信息都将用双方商定的加密方法和密钥发送。
+2. 服务器握手结束通知，表示服务器的握手阶段已经结束，这一项同时也是前面发送的所有内容的 hash 值，用于供客户端校验。
+
+　　至此，整个握手阶段全部结束。接下来，客户端与服务器进入加密通信，就完全是使用普通的 HTTP 协议，只不过用 “ 会话密钥 ” 加密内容。
+
+　　HTTPS 在传输数据之前需要客户端（浏览器）与服务端（网站）之前进行一次握手，在握手过程中将确立双方加密传输数据的密码信息。TLS/SSL 中使用了非对称加密、对称加密以及 HASH 算法。
+
+### 14.3.1. 握手过程的具体描述如下
+
+1. 浏览器将自己支持的一套加密规则发送给网站。
+2. 网站从中选出一组加密算法与 HASH 算法，并将自己的身份信息以证书的形式发回给浏览器。证书里面包含了网站地址、加密公钥以及证书的颁发机构等信息。
+3. 浏览器获得网站证书之后浏览器要做一下工作：
+   * a. 验证证书的合法性（验证证书的机构是否合法，证书中包含的网站地址是否与正在访问的地址一致等），如果证书受信任，则浏览器栏里面会显示一个小锁头，否则会给出证书不受信的提示。
+   * b. 如果证书受信任，或者是用户接受了不受信的证书，浏览器会生成一串随机数的密码，并用证书中提供的公钥加密。
+   * c. 使用约定好的 HASH 算法计算握手消息，并使用生成的随机数对消息进行加密，最后将之前生成的所有信息发送给网站。
+4. 网站接收浏览器发来的数据之后要做以下操作：
+   * a. 使用自己的私钥将信息解密取出密码，使用密码解密浏览器发来的握手信息，并验证 HASH 是否与浏览器发来的一致。
+   * b. 使用密码加密一段握手消息，发送给浏览器。
+5. 浏览器解密并计算握手消息的 HASH，如果与服务段发来的 HASH 一致，此时握手过程结束，之后所有的通信数据将由之前浏览器生成的随机密码并利用对称加密算法进行加密。
+
+　　这里浏览器与网站互相发送加密的握手消息并验证，目的是为了保证双方都获得了一致的密码，并且可以正常地加密解密数据，为后续真正数据地传输做一次测试。
+
+### 14.3.2. HTTPS 一般使用的加密与 HASH 算法如下
+
+* 非对称加密算法：RSA、DSA/DSS
+* 对称加密算法：AES、RC4、3DES
+* HASH 算法：MD5、SHA1、SHA256
+
+### 14.3.3. HTTPS 对应的通信时序图
+
+![](/Users/miaomiao/Desktop/android/android_learning_notes/network/HTTPS/image/https对应的通信时序图.png)
+
+#### 4.3.4. SSL 建立连接过程
+
+![](/Users/miaomiao/Desktop/android/android_learning_notes/network/HTTPS/image/SSL建立连接过程.png)
+
+1. client 向 server 发送请求 https://baidu.com，然后连接到 server 的 443 端口，发送的信息主要是随机值 1 和客户端支持的加密算法。
+2. server 接收到消息之后给予 client 响应握手信息，包括随机值 2 和匹配好的协商加密算法，这个加密算法一定是 client 发送给 server 加密算法的子集。
+3. 随即 server 给 client 发送第二个响应报文是数字证书。传送证书，这个证书其实就是公钥，只是包含了很多信息，如证书的颁发机构、过期时间、服务端的公钥、第三方证书认证机构（CA）的签名、服务端的域名信息等内容。
+4. 客户端解析证书，这部分工作是由客户端的 TLS 来完成的，首先会验证公钥是否有效，比如颁发机构、过期时间等等，如果发现异常，则会弹出一个警告框，提示证书存在问题。如果证书没有问题，那么就生成一个随机值（预主密钥）。
+5. 客户端认证证书之后，接下来是通过随机值 1、随机值 2 和预主密钥组装会话密钥，然后通过证书的公钥加密会话密钥。
+6. 传送加密信息，这部分传送的是用证书加密后的会话密钥，目的就是让服务端使用密钥解密得到随机值 1、随机值 2 和预主密钥。
+7. 服务端解密得到随机值 1、随机值 2 和预主密钥，然后组装会话密钥，跟客户端会话密钥相同。
+8. 客户端通过会话密钥加密一条消息发送给服务端，主要验证服务端是否正常接收客户端加密的消息。
+9. 同样服务端也会通过会话密钥加密一条消息回传给客户端，如果客户端能够正常接受的话表明 SSL 层连接建立完成了。
+
+客户端使用对称加密生成密钥对传输数据进行加密，然后使用非对称加密的公钥再对密钥进行加密，所以网络上传输的数据是被密钥加密的密文和用公钥加密后的秘密密钥，因此即使被黑客截取，由于没有私钥，无法获取到加密明文的密钥，便无法获取到明文数据。
