--- a/DataStructure/数据结构/栈.md
+++ b/DataStructure/数据结构/栈.md
@@ -68,7 +68,7 @@ void clear()
 
 　　这里的 stackTop 就相当于以前介绍链表时候的 tail。
 
-## Java Stack 和 LInkedList
+## Java Stack 和 LinkedList
 
 　　Java 中的 Stack 底层是用数组实现的，也就是通过顺序存储的方式实现的。继承自 Vector 类，所以它是线程安全的。
 
