--- a/network/网络常见问题1.md
+++ b/network/网络常见问题1.md
@@ -5,7 +5,7 @@
 ## 1.1. GET 和 POST 的区别
 
 1. GET 方法用于信息获取，它对于数据库方面是安全的（没有修改信息），而 POST 方法是用于修改服务器上资源的请求。
-2. GET 请求的数据会附在 URL 之后，而 POST 方法提交的数据则放置在 HTTP 报文实体的实体中，所以 POST 方法的安全性比 GET 方法要高。
+2. GET 请求的数据会附在 URL 之后，而 POST 方法提交的数据则放置在 HTTP 报文实体中，所以 POST 方法的安全性比 GET 方法要高。
 3. GET 方法传输的数据量一般限制在 2 KB，其原因在于：GET 通过 URL 提交数据，而 URL 本身对数据没有限制，但是不同的浏览器对于 URL 是有限制的，真正的限制取决于操作系统本身；而 POST 方法对于数据大小是无限制的，真正影响到数据大小的是服务器处理程序的能力。
 4. GET 请求是幂等的（反复读取不应该对访问的数据有副作用），可以对 GET 请求返回的数据进行缓存；而 POST  请求不是幂等的，因此也就不能做缓存。
 
@@ -33,8 +33,7 @@
 
 　　安全和幂等的意义在于：当操作没有达到预期的目标时，可以不停的重试，而不会对资源产生副作用。从这个意义上说，POST 操作往往是有害的，但很多时候还是不得不使用它。
 
-　　还有一点需要注意的就是，创建操作可以使用 POST，也可以使用 PUT，区别在于 POST 是作用在一个集合资源之上的（/articles），而 PUT 操作是作用在一个具体资源之上的（/articles/123），
-再通俗点说，如果 URL 可以在客户端确定，那么就使用 PUT，如果是在服务端确定，那么就使用 POST，比如说很多资源使用数据库自增主键作为标识信息，而创建的资源的标识信息到底是什么只能由服务端提供，这个时候就必须使用 POST。
+　　还有一点需要注意的就是，创建操作可以使用 POST，也可以使用 PUT，区别在于 POST 是作用在一个集合资源之上的（/articles），而 PUT 操作是作用在一个具体资源之上的（/articles/123），再通俗点说，如果 URL 可以在客户端确定，那么就使用 PUT，如果是在服务端确定，那么就使用 POST，比如说很多资源使用数据库自增主键作为标识信息，而创建的资源的标识信息到底是什么只能由服务端提供，这个时候就必须使用 POST。
 
 # 2. HTTP 和 HTTPS 的区别
 
@@ -46,7 +45,11 @@
 
 # 3. IPv4 和 IPv6 的区别，特点
 
+　　网络上每台机器都有唯一的标识符。计算机使用唯一标识符将数据发送到网络上的特定计算机，这与在邮件中发送信件的地址相同。今天的大多数网络，包括 Internet 上的所有计算机，都使用 TCP/IP 协议作为网络上通信的标准。在 TCP/IP 协议中，计算机的唯一标识符称为 IP 地址。
+
 　　IP 因特网互联协议是 TCP/IP 体系的网络层协议，为上可载送传输层各种协议的信息，例如 TCP、UDP 等，对下可将 IP 信息包放到链路层，通过以太网、令牌环网络等各种技术来传送。
+
+　　随着网络的发展，目前 IPv4 地址已经全部分配完毕，地址紧缺的问题十分严峻。IPv6 具有更多地址数量、更小路由表、更好安全性等优点，可以有效解决当前 IPv4 面临的问题。
 
 　　IPv4 和 IPv6 都属于 “互联网协议”。
 
@@ -110,7 +113,7 @@
 
    SYN 标识该数据包用来建立连接，ACK 用来确认收到了刚才客户端发送的数据包。
 
-3. 第三次握手：客户端收到数据包，检测到已经设置了 SYN 和 ACK 标志位，就知道这是服务器发来的 ” 确认包 “。客户端会检测 ” 确认号（Ack）“ 字段，看它的值是否为 J+1，如果是就说明连接建立成功，接着，客户端会继续组建数据包，并将标志位 ACK 设置为 1，标识客户端正确接受了服务器发来的 ” 确认号 “。同时，将刚才服务器发来的数据包序号 K 加 1，用这个数字来填充 ” 确认号（Ack） “ 字段。最后客户端将数据包发出，进入 ESTABLISED 状态，并分配资源，标识连接已经成功建立。
+3. 第三次握手：客户端收到数据包，检测到已经设置了 SYN 和 ACK 标志位，就知道这是服务器发来的 ” 确认包 “。客户端会检测 ” 确认号（Ack）“ 字段，看它的值是否为 J+1，如果是就说明连接建立成功，接着，客户端会继续组建数据包，并将标志位 ACK 设置为 1，表示客户端正确接受了服务器发来的 ” 确认号 “。同时，将刚才服务器发来的数据包序号 K 加 1，用这个数字来填充 ” 确认号（Ack） “ 字段。最后客户端将数据包发出，进入 ESTABLISED 状态，并分配资源，标识连接已经成功建立。
 
    服务端收到数据包，检测到已经设置了 ACK 标志位，就知道这是客户端发来的 ” 确认包 “。服务器会检测 ” 确认号（Ack）“ 字段，看它的值是否为 K+1，如果是就说明连接成功，服务器进入 ESTABLISED 状态。
 
@@ -152,10 +155,24 @@
 
 # 5. TCP 和 UDP 是什么？区别？
 
-1. TCP 和 UDP 都是传输层协议，负责进程中端对端的通信。
-2. TCP 是传输控制协议，UDP 是用户数据报协议。
-3. TCP 是面向连接的、可靠的、基于字节流的通信协议，数据在传输前通过三次握手建立连接，传输完成后要四次挥手断开连接；UDP 是面向无连接的通信协议，传输数据之前源端和终端不建立连接，在通讯时不需要接收方确认，属于不可靠的传输，无法保证正确性，可能会出现丢包现象。
-4. TCP 是面向连接的，只能用于一对一的通讯；UDP 可以用于一对多、多对多的通讯。
+## 5.1. TCP
+
+　　TCP（Transmission Control Protocol，传输控制协议）：TCP 是一种面向连接的、可靠的、基于字节流的传输层通信协议，使用三次握手协议简历连接、四次挥手断开连接。面向连接意味着两个使用 TCP 的应用（通常是一个哭护短和一个服务器）在彼此交换数据包之前必须先建立一个 TCP 连接。在一个 TCP 连接中，仅有两方进行彼此通信，广播和多播不能用 TCP。TCP 协议的作用是，保证数据通信的完整性和可靠性，防止丢包。TCP 把连接作为最基本的对象，每一条 TCP 连接都有两个端点，这种断电我们叫做套接字（socket），端口号拼接到 IP 地址即构成了套接字。
+
+## 5.2. UDP
+
+　　UDP（User Datagram Protocol 用户数据报协议）：UDP 是 OSI（Open System Interconnection 开放式系统互联）参考模型中一种无连接的传输层协议，提供面向事务的简单不可靠信息传送服务。UDP 协议的主要作用是将网络数据流量压缩成数据包的形式。
+
+## 5.3. TCP 与 UDP 的区别
+
+1. TCP 是传输控制协议，UDP 是用户数据报协议。
+2. TCP 提供的是面向连接的、可靠的数据流传输；UDP 提供的是非面向连接的、不可靠的数据流传输。
+3. TCP 提供可靠的服务，通过 TCP 连接传送的数据，无差错、不丢失、按序到达；UDP 尽最大努力交付，既不保证可靠交付。
+4. TCP 面向字节流，UDP 面向报文。
+5. TCP 连接只能是点到点的；UDP 支持一对一、一对多、多对一和多对多的交互通信。
+6. UDP 具有较好的实时性，工作效率比 TCP 高，适用于对高速传输和实时性有较高的通信或广播通信。
+7. TCP 对系统资源要求较多，UDP 对系统资源要求较少。TCP 首部要 20 个字节；UDP 的首部只有 8 个子节。
+8. TCP 的逻辑通信信道是全双工的可靠信道；UDP 的逻辑通信信道是不可靠信道。
 
 # 6. 四层协议分别是什么？以及说明具有代表性的协议？
 
@@ -396,223 +413,3 @@
 1. 开启网络防火墙；
 2. 关闭不常用端口，只开启平时使用的端口，减少病毒攻击的可能；
 3. 定时打补丁，修复计算机漏洞。
-
-# 11. HTTP 2.0
-
-　　HTTP 2.0 的出现，相比于 HTTP 1.x，大幅度的提升了 web 性能。在与 HTTP/1.1 完全于以兼容的基础上，进一步减少了网络延迟。而对于前端开发人员来说，无疑减少了在前端方面的优化工作。
-
-## 11.1. HTTP 2.0 的特点
-
-### 11.1.1. 多路复用（Multiplexing）
-
-　　多路复用允许同时通过单一的 HTTP/2 连接发起多重的请求-响应消息。
-
-　　在 HTTP/1.1 协议中，浏览器客户端在同一时间，针对同一域名下的请求有一定数量限制。超过限制数目的请求会被阻塞。
-
-　　这也是为何一些站点会有多个静态资源 CDN 域名的原因之一，拿 Twitter 为例，目的就是变相的解决浏览器针对同一域名的请求限制阻塞问题。
-
-　　而 HTTP/2 的多路复用（Multiplexing）则允许同时通过单一的 HTTP/2 连接发起多重的请求-响应消息。
-
-![](image/多路复用.jpg)
-
-　　因此 HTTP/2 可以很容易的去实现多流并行而不用依赖建立多个 TCP 连接，HTTP/2 把 HTTP 协议通信的基本单位缩小为一个一个的帧，这些帧对应着逻辑流中的消息。并行地在同一个 TCP 连接上双向交换信息。
-
-### 11.1.2. 二进制分帧
-
-　　在不改动 HTTP/1.x 的语义、方法、状态码、URI 以及首部字段......的情况下，HTTP/2 是如何做到 [ 突破 HTTP 1.1 的性能限制，改进传输性能，实现低延迟和高吞吐量 ] 的？
-
-　　关键之一就是在应用层（HTTP/2）和传输层（TCP or UDP） 之间增加一个二进制分帧层。
-
-![](image/二进制分帧层.jpg)
-
-　　在二进制分帧层中，HTTP/2 会将所有传输的信息分割为更小的消息和帧（frame），并对它们采用二进制格式的编码，其中 HTTP 1.x 的首部消息会被封装到 HEADER frame，而相应的 Request Body 则封装到 DATA frame 里面。
-
-　　HTTP/2 通信都在一个连接上完成，这个连接可以承载任意数量的双向数据流。
-
-　　在过去，HTTP 性能优化的关键并不在于高宽带，而是低延迟。TCP 连接会随着时间进行自我 [调谐]，起初会限制连接的最大速度，如果数据成功传输，会随着时间的推移提供传输的速度。这种调谐被称为 TCP 慢启动。由于这种原因，让原本就具有突发性和段时性的 HTTP 连接变得十分低效。
-
-　　HTTP/2 通过让所有数据流共用同一个连接，可以更有效地使用 TCP 连接，让高带宽也能真正地服务于 HTTP 的性能提升。
-
-　　总结：
-
-* 单连接多资源的方式，减少服务端的连接压力，内存占用更少，连接吞吐量更大。
-* 由于 TCP 连接的减少而使网络拥塞状态得以改善，同时慢启动时间的减少，使拥塞和丢包恢复速度更快。
-
-![](image/HTTP2流消息和帧.jpg)
-
-### 11.1.3. 首部压缩（Header Compression）
-
-　　HTTP/1.1 并不支持 HTTP 首部压缩，为此 SPDY（网络协议，SPDY 并不是一种用于替代 HTTP 的协议，而是对 HTTP 协议的增强。新协议的功能包括数据流的多路复用、请求优先级，以及 HTTP 包头压缩。） 和 HTTP/2 应运而生，SPDY 使用的是通用的 DEFLATE 算法，而 HTTP/2 则使用了专门为首部压缩而设计的 HPACK 算法。
-
-![](image/首部压缩.jpg)
-
-### 11.1.4. 服务端推送（Server Push）
-
-　　服务端推送是一种在客户端请求之前发送数据的机制。在 HTTP/2 中，服务器可以对客户端的一个请求发送多个响应。Server Push 让 HTTP 1.x 时代使用内嵌资源的优化手段变得没有意义；如果一个请求是由主页发起的。这相当于在一个 HTML 文档内集合了所有的资源，不过与之相比，服务器推送还有一个很大的优势：可以缓存！也让在遵循同源的情况下，不同页面之间可以共享缓存资源成为可能。
-
-![](image/服务端推送.jpg)
-
-HTTP/2 对现在的网页访问，有什么大的优化呢？体现在什么地方？https://www.zhihu.com/question/24774343/answer/96586977
-
-HTTP/2 相比 1.0 有哪些重大改进？ https://www.zhihu.com/question/34074946
-
-http/2.0简介 https://blog.csdn.net/lhZero_F/article/details/89356674
-
-# 12. 介绍一下 https，CA证书客户端是如何校验的
-
-　　HTTPS 超文本安全传输协议，是 SSL/TSL + HTTP 协议构建的具有安全性的传输协议，数据传输过程是加密的，安全性较好。
-
-　　通过 TSL/SSL 协议的身份验证、信息加密和完整性校验的功能，从而避免信息窃听、信息篡改和信息劫持的风险。
-
-　　TLS 与 SSL 在传输层对网络连接进行加密。
-
-## 12.1. 客户端验证证书安全性过程
-
-1. 当客户端收到这个证书之后，使用本地配置的权威机构的公钥对证书进行解密得到服务器的公钥和证书的数字签名，数字签名经过 CA 公钥解密得到证书信息摘要。
-2. 然后证书签名的方法计算一下当前证书的信息摘要与收到的信息摘要作对比，如果一样，表示证书一定是服务器下发的，没有被中间人篡改过，因为中间人虽然有权威机构的公钥，能够解析证书内容并篡改，但是篡改完成之后中间人需要将证书重新加密，但是中间人没有权威机构的私钥，无法加密，强行加密只会导致客户端无法解密，如果中间人强行乱修改证书，就会导致证书内容和证书签名不匹配。
-
-## 12.2. SSL 协议主要服务
-
-1. 认证用户和服务器，确保数据发送到正确的客户机和服务器。
-2. 加密数据以防止数据中途被窃取。
-3. 维护数据的完整性，确保数据在传输过程中不被改变。
-
-# 13. DNS 解析过程，如果服务器 ip 地址改变了，客户端怎么知道呢
-
-通常，DNS 请求的顺序为：浏览器缓存->系统缓存（host文件）->路由器缓存->ISP DNS 缓存。
-
-服务器 ip 地址改变后，获取缓存的 ip 地址将请求不到，就会到 DNS 服务器获取，并更新当前缓存。
-
-# 14. HTTPS 过程 
-
-![](/Users/miaomiao/Desktop/android/android_learning_notes/network/HTTPS/image/https工作原理.png)
-
-1. 客户端发送 HTTPS 请求
-
-   就是用户在浏览器里输入一个 https 网址，然后连接到 server 的 443 端口。
-
-2. 服务端的配置
-
-   采用 HTTPS 协议的服务器必须要有一套数字证书，可以自己制作，也可以向组织申请，区别就是自己颁发的证书需要客户端验证通过，才可以继续访问，而使用受信任的公司申请的证书申请的证书则不会弹出提示页面。
-
-　　这套证书其实就是一对公钥和私钥。
-
-3. 传送证书
-
-   这个证书其实就是公钥，只是包含了很多信息，如证书的颁发机构、过期时间等等。
-
-4. 客户端解析证书
-
-   这部分工作是由客户端的 TLS 来完成的，首先会验证公钥是否有效，比如颁发机构、过期时间等等，如果发现异常，则会弹出一个警告框，提示证书存在问题。
-
-   如果证书没有问题，那么就生成一个随机值，然后用证书对该随机值进行非对称加密。
-
-5. 传送加密信息
-
-   这部分传送的是用证书加密后的随机值，目的就是让服务端得到这个随机值，以后客户端和服务端的通信就可以通过这个随机值进行加密解密了。
-
-6. 服务端解密信息
-
-   服务端用私钥解密后，得到了客户端传过来的随机值（私用），然后把内容通过该值进行对称加密，所谓对称加密就是，将信息和私钥通过某种算法混合在一起，这样除非知道私钥，不然无法获取内容，而正好客户端和服务端都知道这个私钥，所以只要加密算法够彪悍，私钥够复杂，数据就够安全。
-
-7. 传输加密后的信息
-
-　　这部分信息是服务端用私钥加密后的信息，可以在客户端被还原。
-
-8. 客户端解密信息
-
-   客户端用之前生成的私钥解密服务端传过来的信息，于是获取了解密后的内容，整个过程第三方即使监听了数据，也束手无策。
-
-## 14.1. 基本的运行过程
-
-　　HTTPS 默认工作在 TCP 协议 443 端口，它的工作流程一般如以下方式：
-
-1. TCP 三次同步握手
-2. 客户端验证服务器数字证书
-3. DH 算法协商对称加密算法的密钥、hash 算法的密钥
-4. SSL 安全加密隧道协商完成
-5. 网页以加密的方式传输，用协商的对称加密算法和密钥加密，保证数据机密性；用协商的 hash 算法进行数据完整性保护，保证数据不被篡改。
-
-　　SSL/TLS 协议的基本思路是采用公钥加密法，也就是说，客户端先向服务器索要公钥，然后用公钥加密信息，服务器收到密文件后，用自己的私钥解密。
-
-1. 如何保证公钥不被篡改？
-
-   解决方法：将公钥放在数字证书中。只要证书是可信的，公钥就是可信的。
-
-2. 公钥加密计算量太大，如何减少耗用的时间？
-
-   解决方法：每一次对话（seesion），客户端和服务器端都生成一个 “对话密钥”（session key），用它来加密信息。由于 “ 对话密钥 ” 是对称加密，所以运算速度非常快，而服务器公钥只用于加密 “ 对话密钥 ” 本身，这样就减少了加密运算的消耗时间。
-
-## 14.2. SSL/TSL 协议的基本过程
-
-　　SSL/TLS 协议的基本过程是这样的：
-
-1. 客户端向服务器端索要并验证公钥。
-2. 双方协商生成 “ 对话密钥 ”。
-3. 双方采用 “ 对话密钥 ” 进行加密通信。
-
-　　前两步，又称为 “ 握手阶段 ”（handshake）。
-
-## 14.3. SSL、TLS 的握手过程
-
-![](./HTTPS/image/SSL与TLS的握手过程.png)
-
-　　SSL 协议在握手阶段使用的是非对称加密，在传输节点使用的是对称加密，也就是说在 SSL 上传送的数据是使用对称密钥加密的。
-
-　　因为非对称加密的速度缓慢，浪费资源。其实当客户端和主机使用非对称加密方式建立连接后，客户端和主机已经决定好了在传输过程使用的对称加密算法和关键的对称加密密钥，由于这个过程本身是安全可靠的，也即对称加密密钥是不可能被窃取盗用的，因此，保证了在传输过程中对数据进行对称加密也是安全可靠的，因为除了客户端和自己之外，不可能有第三方窃听并解密出对称加密密钥。如果有人窃听通信，它可以知道双方选择的加密方法，以及三个随机数中的两个。整个通话的安全，只取决于第三个随机数（pre-master secret）能不能被破解。
-
-　　第三个随机数 c，又称 “ pre-master key ”。有了它以后，客户端和服务器就同时有了三个随机数，接着双方就用实现商定的加密方法，各自生成本次会话所用的同一把 " session key（会话密钥）"。
-
-　　为什么一定要用三个随机数，来生成 “ 会话密钥 ”，SSL 协议不信任每个主机都能产生完全随机的随机数，如果随机数不随机，那么会话密钥就有可能被猜出来，一个伪随机可能完全不随机，可是三个伪随机就十分接近随机了，每增加一个自由度，随机性增加的可不是一。
-
-　　客户端收到服务器第一次的回应以后，首先验证服务器证书。如果证书不是可信机构颁布、或者证书中的域名与实际域名不一致、或者证书已经过期，就会向访问者显示一个警告，由其选择是否还要继续通信。
-
-　　服务器收到客户端的三个随机数之后，计算生成本次会话所用的 “ 会话密钥 ”。然后，向客户端最后发送下面信息：
-
-1. 编码改变通知，表示随后的信息都将用双方商定的加密方法和密钥发送。
-2. 服务器握手结束通知，表示服务器的握手阶段已经结束，这一项同时也是前面发送的所有内容的 hash 值，用于供客户端校验。
-
-　　至此，整个握手阶段全部结束。接下来，客户端与服务器进入加密通信，就完全是使用普通的 HTTP 协议，只不过用 “ 会话密钥 ” 加密内容。
-
-　　HTTPS 在传输数据之前需要客户端（浏览器）与服务端（网站）之前进行一次握手，在握手过程中将确立双方加密传输数据的密码信息。TLS/SSL 中使用了非对称加密、对称加密以及 HASH 算法。
-
-### 14.3.1. 握手过程的具体描述如下
-
-1. 浏览器将自己支持的一套加密规则发送给网站。
-2. 网站从中选出一组加密算法与 HASH 算法，并将自己的身份信息以证书的形式发回给浏览器。证书里面包含了网站地址、加密公钥以及证书的颁发机构等信息。
-3. 浏览器获得网站证书之后浏览器要做一下工作：
-   * a. 验证证书的合法性（验证证书的机构是否合法，证书中包含的网站地址是否与正在访问的地址一致等），如果证书受信任，则浏览器栏里面会显示一个小锁头，否则会给出证书不受信的提示。
-   * b. 如果证书受信任，或者是用户接受了不受信的证书，浏览器会生成一串随机数的密码，并用证书中提供的公钥加密。
-   * c. 使用约定好的 HASH 算法计算握手消息，并使用生成的随机数对消息进行加密，最后将之前生成的所有信息发送给网站。
-4. 网站接收浏览器发来的数据之后要做以下操作：
-   * a. 使用自己的私钥将信息解密取出密码，使用密码解密浏览器发来的握手信息，并验证 HASH 是否与浏览器发来的一致。
-   * b. 使用密码加密一段握手消息，发送给浏览器。
-5. 浏览器解密并计算握手消息的 HASH，如果与服务段发来的 HASH 一致，此时握手过程结束，之后所有的通信数据将由之前浏览器生成的随机密码并利用对称加密算法进行加密。
-
-　　这里浏览器与网站互相发送加密的握手消息并验证，目的是为了保证双方都获得了一致的密码，并且可以正常地加密解密数据，为后续真正数据地传输做一次测试。
-
-### 14.3.2. HTTPS 一般使用的加密与 HASH 算法如下
-
-* 非对称加密算法：RSA、DSA/DSS
-* 对称加密算法：AES、RC4、3DES
-* HASH 算法：MD5、SHA1、SHA256
-
-### 14.3.3. HTTPS 对应的通信时序图
-
-![](/Users/miaomiao/Desktop/android/android_learning_notes/network/HTTPS/image/https对应的通信时序图.png)
-
-#### 4.3.4. SSL 建立连接过程
-
-![](/Users/miaomiao/Desktop/android/android_learning_notes/network/HTTPS/image/SSL建立连接过程.png)
-
-1. client 向 server 发送请求 https://baidu.com，然后连接到 server 的 443 端口，发送的信息主要是随机值 1 和客户端支持的加密算法。
-2. server 接收到消息之后给予 client 响应握手信息，包括随机值 2 和匹配好的协商加密算法，这个加密算法一定是 client 发送给 server 加密算法的子集。
-3. 随即 server 给 client 发送第二个响应报文是数字证书。传送证书，这个证书其实就是公钥，只是包含了很多信息，如证书的颁发机构、过期时间、服务端的公钥、第三方证书认证机构（CA）的签名、服务端的域名信息等内容。
-4. 客户端解析证书，这部分工作是由客户端的 TLS 来完成的，首先会验证公钥是否有效，比如颁发机构、过期时间等等，如果发现异常，则会弹出一个警告框，提示证书存在问题。如果证书没有问题，那么就生成一个随机值（预主密钥）。
-5. 客户端认证证书之后，接下来是通过随机值 1、随机值 2 和预主密钥组装会话密钥，然后通过证书的公钥加密会话密钥。
-6. 传送加密信息，这部分传送的是用证书加密后的会话密钥，目的就是让服务端使用密钥解密得到随机值 1、随机值 2 和预主密钥。
-7. 服务端解密得到随机值 1、随机值 2 和预主密钥，然后组装会话密钥，跟客户端会话密钥相同。
-8. 客户端通过会话密钥加密一条消息发送给服务端，主要验证服务端是否正常接收客户端加密的消息。
-9. 同样服务端也会通过会话密钥加密一条消息回传给客户端，如果客户端能够正常接受的话表明 SSL 层连接建立完成了。
-
-客户端使用对称加密生成密钥对传输数据进行加密，然后使用非对称加密的公钥再对密钥进行加密，所以网络上传输的数据是被密钥加密的密文和用公钥加密后的秘密密钥，因此即使被黑客截取，由于没有私钥，无法获取到加密明文的密钥，便无法获取到明文数据。
