--- a/DataStructure/关于数据结构与算法的常见编程题1.md
+++ b/DataStructure/关于数据结构与算法的常见编程题1.md
@@ -186,7 +186,7 @@ public class QueueByStack2<T> {
 
 [Java实现 LeetCode 199 二叉树的右视图](https://blog.csdn.net/a1439775520/article/details/104487759/)
 
-使用双向队列 Queue，每一行的最后一个节点加入链表中，链表中的节点就是二叉树的右视图。
+　　使用双向队列 Queue，每一行的最后一个节点加入链表中，链表中的节点就是二叉树的右视图。
 
 ```java
     public List<TreeNode> showRight(TreeNode treeNode) {
@@ -226,6 +226,39 @@ public class QueueByStack2<T> {
 
 
 
-5. 一个字符串，求最长没有重复字符的字符串长度
+# 5. 一个字符串，求最长没有重复字符的字符串长度
 
+[给定一个字符串，找出不含有重复字符的最长子串的长度。](https://blog.csdn.net/liuguangqiang/article/details/79931473)
+
+　　滑块思想，最大窗口。快慢指针 i，j 结合 hash。 
+（1）快指针 j 所在元素不重复，更新 max，将快指针 j 元素在 hash 表中的标记为出现，后移 j。 
+（2）快指针 j 所在元素重复，慢指针后移，此时将慢指针 i 元素在 hash 表中的标记清除。此时并不关心是谁重复，重复元素前的元素都要清除掉。 
+不断重复上面 2 步，直到 i 或 j 到达字符串末尾。时间复杂度 o(n)。
+
+```java
+    public static String getLongestSubstring(String string) {
+        if (string == null || string.length() == 0) {
+            return "";
+        }
+        char[] charArrays = string.toCharArray();
+        boolean[] flagArrays = new boolean[500];
+        int i = 0, j = 0;
+        int maxStart = i, maxEnd = j;
+        while (i < string.length() && j < string.length()) {
+            if (flagArrays[charArrays[j]]) {
+                // 重复了
+                if ((j - i) > (maxEnd - maxStart)) {
+                    maxEnd = j;
+                    maxStart = i;
+                }
+                flagArrays[charArrays[i]] = false;
+                i++;
+            } else {
+                flagArrays[charArrays[j]] = true;
+                j++;
+            }
+        }
+        return string.substring(maxStart, maxEnd);
+    }
+```
 
