--- a/DataStructure/关于数据结构与算法的常见问题目录.md
+++ b/DataStructure/关于数据结构与算法的常见问题目录.md
@@ -13,7 +13,8 @@
 1. 写一个函数，输入两个字符串，输出这两个字符串的字符的交集，例如，当 s1 = "mafazine"，s2 = "validate" 时，函数返回 "aie"。
 2. 手写冒泡排序
 3. 两个栈实现队列
-4. 
+4. 算法：二叉树的右视图
+5. 一个字符串，求最长没有重复字符的字符串长度
 
 # 关于数据结构与算法的常见编程题 2
 
