--- a/DataStructure/关于数据结构与算法的常见编程题2.md
+++ b/DataStructure/关于数据结构与算法的常见编程题2.md
@@ -4,19 +4,78 @@
 
 　　二分查找（binary search），也称折半查找，是一种在有序数组中查找某一特定元素的搜索算法，属于有序查找算法。搜索过程从数组的中间元素开始，如果中间元素正好是要查找的元素，则搜索过程结束；如果某一特定元素大于或者小于中间元素，则在数组大小或小于中间元素的那一半中查找，而且跟开始一样从中间元素开始比较。如果在某一步骤数组为空，则代表找不到，这种搜索算法每一次比较都使搜索范围缩小一半。
 
+　　元素必须是有序的，如果是无需的则要先进行排序操作。
+
+　　注：折半查找的前提条件是需要有序表顺序存储，对于静态查找表，一次排序后不再变化，折半查找能得到不错的效率。但对于需要频繁执行插入或删除操作的数据集来说，维护有序的排序会带来不小的工作量，那就不建议使用。
+
+* 时间复杂度：这种搜索每次都把搜索区域减少一半，时间复杂度为 O(logN)(N 代表集合中元素的个数)。
+* 空间复杂度：O(1)。虽以递归形式定义，但是尾递归，可改写尾循环。
+
+**代码实现**
+
+　　先设定 begin=0,end=length-1，mid = begin+(end-begin)/2，标记 mid 的值与 key 的大小。
+
+　　如果相同，返回 index。
+
+　　如果 mid<begin，那么 begin = mid+1，如果 mid>key，那么 end = mid-1。
+
+　　然后循环，直到 end < begin，返回 -1。
+
 ```java
-    public static int binarySearch(int[] nums, int left, int right, int data) {
-        if (left > right) {
-            return -1;
-        }
-        int mid = left + (right - left) / 2;
-        if (nums[mid] > data) {
-            return binarySearch(nums, left, mid - 1, data);
-        } else if (nums[mid] < data) {
-            return binarySearch(nums, mid + 1, right, data);
+/**
+ * 二分查找
+ */
+public class BinarySearch {
+
+    /**
+     * 递归
+     *
+     * @param array
+     * @param low
+     * @param high
+     * @param key
+     * @return
+     */
+    public static int binarySearch(int array[], int low, int high, int key) {
+        if (low > high) return -1;
+        int mid = low + (high - low) / 2;
+        if (array[mid] > key) {
+            return binarySearch(array, low, mid - 1, key);
+        } else if (array[mid] < key) {
+            return binarySearch(array, mid + 1, high, key);
         } else {
             return mid;
         }
     }
+
+    /**
+     * 非递归
+     *
+     * @param a
+     * @param key
+     * @return
+     */
+    public static int binarySearchWithoutRecusion(int a[], int key) {
+        int low = 0;
+        int high = a.length - 1;
+        while (low <= high) {
+            int mid = low + (high - low) / 2;
+            if (a[mid] > key) {
+                high = mid - 1;
+            } else if (a[mid] < key) {
+                low = mid + 1;
+            } else {
+                return mid;
+            }
+        }
+        return -1;
+    }
+
+    public static void main(String[] args) {
+        int a[] = new int[]{0, 1, 2, 3, 4, 5, 6, 7, 8, 9};
+        System.out.println("search 7:" + binarySearch(a, 0, a.length - 1, 7));
+        System.out.println("search 5:" + binarySearchWithoutRecusion(a, 5));
+    }
+}
 ```
 
