--- a/DataStructure/关于数据结构与算法的常见编程题2.md
+++ b/DataStructure/关于数据结构与算法的常见编程题2.md
@@ -79,3 +79,66 @@ public class BinarySearch {
 }
 ```
 
+# 2.  输入一个数组，想一种方法让这个数组尽可能的乱序，保证功能能实现的情况下时间复杂度和空间复杂度尽可能的小，可使用随机数函数。
+
+Fisher-Yates Shuffle ：算法思想就是从原始数组中随机抽取一个新的数字到新数组中。
+
+Knuth-Durstendeld Shuffle：每次从未处理的数据中随机取出一个数组，然后把该数字放在数组的尾部，即数组尾部存放的是已经处理过的数组。
+
+Inside-Out Shuffle：是一个 in-place 算法，原始数据被直接打乱，有些应用中可能需要保留原始数据，因此需要开辟一个新数组来存储打乱后的序列。Inside-Out Algorithm 算法的基本思想是设一游标 i 从前向后扫描原始数据的拷贝，在 [0,i] 之间随机一个小标 j，然后用位置 j 的元素替换掉位置 i 的数字，再用原始数据位置 i 的元素替换掉拷贝数据位置 j 的元素。
+
+```java
+    /**
+     * Fisher-Yates Shuffle ：
+     * 算法思想就是从原始数组中随机抽取一个新的数字到新数组中。
+     *
+     * @param nums
+     * @return
+     */
+    public static int[] FYShuffle(int[] nums) {
+        int[] result = new int[nums.length];
+        boolean[] flags = new boolean[nums.length];
+        Random random = new Random();
+        int n = 0;
+        while (n != nums.length) {
+            int r = random.nextInt(nums.length);
+            if (!flags[r]) {
+                result[n++] = nums[r];
+                flags[r] = true;
+            }
+        }
+        return result;
+    }
+
+    /**
+     * Knuth-Durstendeld Shuffle：
+     * 每次从未处理的数据中随机取出一个数组，然后把该数字放在数组的尾部，即数组尾部存放的是已经处理过的数组。
+     *
+     * @param nums
+     */
+    public static void KDShuffle(int[] nums) {
+        Random random = new Random();
+        for (int i = nums.length - 1; i > 0; i--) {
+            int r = random.nextInt(i);
+            int temp = nums[r];
+            nums[r] = nums[i];
+            nums[i] = temp;
+        }
+    }
+
+    /**
+     * Inside-Out Shuffle：是一个 in-place 算法，原始数据被直接打乱，有些应用中可能需要保留原始数据，因此需要开辟一个新数组来存储打乱后的序列。
+     * Inside-Out Algorithm 算法的基本思想是设一游标 i 从前向后扫描原始数据的拷贝，
+     * 在 [0,i] 之间随机一个小标 j，然后用位置 j 的元素替换掉位置 i 的数字，再用原始数据位置 i 的元素替换掉拷贝数据位置 j 的元素。
+     * @param nums
+     */
+    public static void IOShuffle(int[] nums){
+        Random random = new Random();
+        for (int i = 1;i<nums.length;i++){
+            int r = random.nextInt(i);
+            int temp = nums[i];
+            nums[i] = nums[r];
+            nums[r] = temp;
+        }
+    }
+```
