--- a/OpenSourceLibrary/开源库常见问题.md
+++ b/OpenSourceLibrary/开源库常见问题.md
@@ -140,7 +140,9 @@ client = new OkHttpClient.Builder()
 
 ## 3.4. okhttp源码：分发器和五大拦截器； 
 
+　　Okhttp 的同步请求和以部请求都会交给分发器去执行，同步请求时降任务直接加入到同步执行队列中，异步请求是将任务异步运行队列中，并且会交给线程持执行。
 
+　　而任务的执行主要靠拦截器来完成。
 
 # 4. Retrofit
 
